--- a/QuickHealthClinic/QuickHealthClinic/appsettings.json
+++ b/QuickHealthClinic/QuickHealthClinic/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "QuickHealthClinicConnection": "Server=localhost;Database=QuickHealthClinic;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  }
 }
