Created Configuration folder for FluentApi

--- a/QuickHealthClinic/QuickHealthClinic/QuickLifeCoachingClinic.csproj
+++ b/QuickHealthClinic/QuickHealthClinic/QuickLifeCoachingClinic.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Configurations\Extensions\" />
+    <Folder Include="DataAccess\Configurations\" />
   </ItemGroup>
 
 </Project>
