Moves Configuration folder to Entities folder

--- a/QuickHealthClinic/QuickHealthClinic/QuickLifeCoachingClinic.csproj
+++ b/QuickHealthClinic/QuickHealthClinic/QuickLifeCoachingClinic.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Configurations\Extensions\" />
-    <Folder Include="DataAccess\Configurations\" />
+    <Folder Include="DataAccess\Entities\Configurations\" />
   </ItemGroup>
 
 </Project>
